name:           BoarH
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         brianchin

executable BoarH
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers >=0.5.0 && <0.6,
                   data-reify >=0.6 && <0.7,
                   mtl >=2.1.3 && <2.2
  ghc-options:     -Wall
  other-modules:   
                   Grammar,
                   MultiMap,
                   ProdState,
                   Fixpoint,
                   Graph,
                   Parser.Earley,
                   ParseState,
                   Generate.EarleyStates,
                   Data.Bundle,
                   Data.IRef

test-suite GraphTest
  type:            exitcode-stdio-1.0
  main-is:         TestMain.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, HTF > 0.9,
                   QuickCheck >=2.6 && <2.7,
                   mtl >=2.1.3 && <2.2
  other-modules:   
                  Graph,
                  GraphTest,
                  TestMain,
                  Parser.Earley,
                  ParseState,
                  Generate.EarleyStates,
                  Data.Bundle,
                  Data.IRef
  hs-source-dirs:  
                  test,
                  src 

